<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:inputType="textPassword"
                app:srcCompat="@drawable/main_diary" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="@color/colorDark"
                android:gravity="center|top"
                android:text="@string/app_name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <EditText
                    android:id="@+id/textPassword"
                    android:layout_width="450dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="110dp"
                    android:background="@drawable/password"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:textSize="30sp" />


            <Button
                android:id="@+id/buttonMainContinue"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textSize="24sp"
                android:padding="10dp"
                android:background="@drawable/button_continue_passwor_first"
                android:text="@string/buttonContinuePasswordFirst" />

            <TextView
                android:id="@+id/textViewIsNotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorRed"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:text="@string/isNotPassword"
                android:visibility="gone"
                android:layout_marginBottom="24dp"/>

            <TextView
                android:id="@+id/forgetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="24sp"
                android:text="@string/forgetPassword" />
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>