<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:padding="30dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorDark"
            android:text="@string/secretWord" />
        <EditText
            android:id="@+id/edit_textForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:hint="@string/secretWord"
            />

        <Button
            android:id="@+id/buttonContinueForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/button_continue_passwor_first"
            android:text="@string/buttonContinuePasswordFirst" />

        <TextView
            android:id="@+id/textIsNotSecretWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorRed"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:text="@string/secretWordForget"
            android:visibility="gone"/>
    </LinearLayout>
</RelativeLayout>