<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp">

        <TextView
            android:gravity="center"
            android:id="@+id/textPasswordFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:textSize="25sp"
            android:hint="@string/write_password"
            android:textColor="@color/colorDark" />

        <EditText
            android:gravity="center"
            android:id="@+id/edit_text_passwordFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/password_write"
            android:layout_marginBottom="50dp"
            android:textSize="35sp"
            android:textColor="@color/colorDark"
            android:inputType="textPassword"/>

        <TextView
            android:gravity="center"
            android:id="@+id/textPasswordReplaceFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:textSize="25sp"
            android:hint="@string/write_password"
            android:textColor="@color/colorDark" />

        <EditText
            android:gravity="center"
            android:id="@+id/edit_text_passwordReplaceFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:background="@drawable/password_write"
            android:textColor="@color/colorDark"
            android:inputType="textPassword"/>


        <Button
            android:id="@+id/buttonContinuePasswordFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_continue_passwor_first"
            android:padding="10dp"
            android:textSize="15sp"
            android:text="@string/buttonContinuePasswordFirst" />

        <TextView
            android:id="@+id/textViewPasswordIsntEquals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/colorRed"
            android:visibility="gone"
            android:text="@string/passworDontEquals" />

    </LinearLayout>
</RelativeLayout>